Correct alignment style of signup and login links in navbar

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -167,7 +167,7 @@ body {
 .noticer {
   width: 100%;
   height: 50px;
-  background: #686de0;
+  background: #2980b9;
   text-align: center;
   position: relative;
   bottom: 16px;
